--- a/content/content/lectures/part3/175_scl_queues.md.erb
+++ b/content/content/lectures/part3/175_scl_queues.md.erb
@@ -1,7 +1,7 @@
 ---
 title: "Queueing"
-homework: 1) Read articles and respond to warmup questions; 2) Continue working on nT 0.7
-desc: Centrality of queuing and message passing concepts in achieving scalable architecture
+homework: 1) Read articles and respond to warmup questions; 2) Continue working on nT 1.0
+desc: Queuing and message passing are basic techniques in scaling
 cat: scale
 ---
 <%= homework_hdr %>
