update for last few levtures

--- a/content/content/lectures/part3/165_scl_concur.md.erb
+++ b/content/content/lectures/part3/165_scl_concur.md.erb
@@ -1,6 +1,6 @@
 ---
-title: "Concurrency"
-desc: "Scaling pattern: Concurrency, Background processing and asynchronous processing"
+title: "Concurrency 1"
+desc: "Synchronous and asynchronous processing, threads and processes"
 homework: 1) Read article closely, answer warmup questions
 cat: scale
 ---
@@ -23,7 +23,7 @@ cat: scale
 
 * <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 0.6 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
-#### Tech Presentation
+##### Tech Presentation
 <%= callout("Presentation", " Yifan Leng - Kubernetes") %>
 
 <%= include_topic :scaling_concur %>
