--- a/content/content/lectures/part3/168_scl_concur_2.md.erb
+++ b/content/content/lectures/part3/168_scl_concur_2.md.erb
@@ -1,11 +1,12 @@
 ---
 title: "Concurrency 2"
 desc: Continuing the discussion on this critical aspect of scaling 
-homework: 1) Self and Peer Assessments
+homework: 1) Implement validation api; 2) Reading
 cat: scale
 ---
 <%= homework_hdr %>
 
+1. <%= teambadge %> <%= pdfbadge %><%= zipbadge %> **Implement Validation API** See <%= link_to_topic :hw_105_validation_api %>. <%= deliverable "Specified in linked homework" %>.
 1. **Read these useful papers** [How do I know if my app is Thread-safe or not?](https://bearmetal.eu/theden/how-do-i-know-whether-my-rails-app-is-thread-safe-or-not/) and [No one understands the GIL](https://www.jstorimer.com/blogs/workingwithcode/8085491-nobody-understands-the-gil) and [Ruby Concurrency Gems](https://github.com/ruby-concurrency). Write a test program from one of these readings to see for yourself what happens.
 
 ##### Ongoing work
