--- a/content/content/lectures/part3/168_scl_concur_2.md.erb
+++ b/content/content/lectures/part3/168_scl_concur_2.md.erb
@@ -12,8 +12,12 @@ cat: scale
 ##### Ongoing work
 * **Teams continue to work on nanoTwitter, heading into Nt 1.0!**
 
-##### Tech Presentation
-<%= callout("Tech Pres",  " Yirun Zhou on Global Scaling Architectures" ) %>
+##### Today
+<%= callout("Tech Pres",  " Matt on Scalability in Scientific Computing" ) %>
+* Status of projects, status of Validation API
+* Continue <%= link_to_section :lectures, :scl_concur %> at Asynchronous Processing
+* Continue here about Threads and Processes and Thread Safety
+
 
 #### Tuning Threads and Processes
 
