Final tweaks at end of semester

--- a/content/content/lectures/part3/195_software_engineering.md.erb
+++ b/content/content/lectures/part3/195_software_engineering.md.erb
@@ -6,26 +6,26 @@ cat: software design
 ---
 <%= homework_hdr %>
 
-* Read: [What is Computer Science?](http://www.cs.mtu.edu/~john/whatiscs.html)
-* Read: [Is Computer Science Science?](http://www.cs.mtu.edu/~john/jenning.pdf)
-
+{:start="1"}
 <%= include_topic :hw_reflection_cosi %>
+{:start="2"}
+1. **Prepare for full scalability runnoff dry run today!**
 
-#### Great, but not required, readings
+##### Great, but not required, readings
 * [“Software Engineering: An Idea whose time has come and gone?](http://www.systemsguild.com/pdfs/tdmsoftwaresummer2009.pdf)
 * [“Can practitioners neglect theory and theoreticians neglect practice?"](http://disciplinas.stoa.usp.br/pluginfile.php/17266/mod_resource/content/1/ieee_computer_mbroy.pdf)
-* <%= link_to_topic :se_rules_of_thumb %>
 * [What is Computer Science?](http://www.cs.mtu.edu/~john/whatiscs.html)
 * [Is Computer Science Sience?](http://www.cs.mtu.edu/~john/jenning.pdf)
 * [Is Mathematics a Science?](http://www.arachnoid.com/is_math_a_science/)
 
-#### Review
+#### Today
 * Let's take a look at the <%= link_to_topic :cosi105b_final_deliverables %>
 * Let's take a look at <%= link_to_topic :scalability_runoff %>
-* Quick review of <%= link_to_topic :nt_client_library %>
-* High level: <%= link_to_topic :software_engineering %>
+* Dry Run of Scalability Runoff
 
-<%= include_topic :se_rules_of_thumb %>
+##### Effectiveness
+* What does this mean: <%= link_to_topic :software_engineering %>
+* How do be effective: <%= link_to_topic :se_rules_of_thumb %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
