--- a/content/content/lectures/part3/200_last_class.md.erb
+++ b/content/content/lectures/part3/200_last_class.md.erb
@@ -10,7 +10,7 @@ A quick review and update:
 1. Deliverables are due **midnight May 1** (Wednesday), see <%= link_to_topic :cosi105b_final_deliverables %>. Your submissions are mostly contained in your github repo. You will put the url of your github repo in the submission in Latte.Those of you who have had several github repos or had some accident with losing information, you need to give us your "official single submission" which is the only one we will review for feedback and grading. Please take the time to neaten it up so that it is presentable and professional. It should include:
     1. All your code, client code, server code, services, everything. You can refer to "How it will be evaluated" if you make sure you have everything covered. Also don't make it a treasure hunt for us to find stuff.
     1. Your README file, including of course all the version by version notes with what was done and who did them and a codeclimate badge.
-    1. And your fully running nanoTwitter deployed to Heroku so we can test it.
+    1. And your fully running nanoTwitter deployed to Digital Ocean so we can test it.
 
 1. **POSTER** The PDF of the poster will be due on the day of the poster session which we are still deciding.
 
