--- a/content/content/lectures/part3/175_scl_queues.md.erb
+++ b/content/content/lectures/part3/175_scl_queues.md.erb
@@ -20,7 +20,7 @@ cat: scale
 * [Rabbit MQ and Kafka](https://karolgalanciak.com/blog/2019/02/24/messages-on-rails-part-1-introduction-to-kafka-and-rabbitmq/)
 
 ##### Ongoing work
-* <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 1.0 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
+* **Teams continue to work on nanoTwitter, heading into Nt 1.0!**
 
 ### Scalability Pattern: Queueing
 
