--- a/content/content/lectures/part3/180_scl_soa.md.erb
+++ b/content/content/lectures/part3/180_scl_soa.md.erb
@@ -12,12 +12,11 @@ cat: scale
     * This classic paper by David Parnas about modularity: [Information distribution aspects of design methodology](https://pdfs.semanticscholar.org/17f0/6e0b0f9d3abcf5771957246e8de847d39b49.pdf). It's so old that you can see it was written with a typewriter. Can you imagine? As you read, think of *modules of a system* as meaning *microservice*. 
     * Also read "Introduction to Architecting Systems for Scale](http://lethain.com/introduction-to-architecting-systems-for-scale/)
 
-1. <%= pdfbadge %> <%= partbadge %> **Read** This review article about [Microservices](http://martinfowler.com/articles/microservices.html). As you read, think about the following warmup questions:
+1. **Read** This review article about [Microservices](http://martinfowler.com/articles/microservices.html). As you read, think about the following warmup questions:
     * Modularity (a characteristic that comes in different guises) is a central concept in software design, Microservices are one way to achieve modularity. Think of some of the others?
     * What would you say is the central characteristic of a microservice that distinguishes it from an other kind of modularity.
     * Draw an analogy between the present paper and Parnas' paper above.
     * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
-    * <%= deliverable "Submit your responses as a pdf to Latte" %>
 
 ##### Userful but not mandatory Reading
 * [Sinatra/Heroku Microservices](https://silkandspinach.net/2014/08/31/sinatraheroku-microservices/)
@@ -27,14 +26,12 @@ cat: scale
 * [How to do services in Heroku](https://www.rdegges.com/2014/heroku-and-soa/)
 
 ##### Ongoing work
-* **Teams continue to work on nanoTwitter 0.8**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
+* **Teams continue to work on nanoTwitter, heading into Nt 1.0!**
 
 #### Today
-* 
-
-#### Review of Scalability Runoff
 * Link to the rules and process for <%= link_to_topic :scalability_runoff %> 
 * Link as a reminder of the required <%= link_to_topic :nt_test_interface %>
+* 
 
 #### SOA / Microservices / Monolith
 <img src="http://www.martinfowler.com/articles/microservices/images/sketch.png" width="500" align="right">
