--- a/content/content/intro/30_cosi105b_grading.md.erb
+++ b/content/content/intro/30_cosi105b_grading.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Grading
 ---
-<%= include_topic :general_grading %>
+<%= include_topic :general_grading_gradescope %>
 
 #### Weighting of marks
 
