--- a/content/content/lectures/part3/195_software_engineering.md.erb
+++ b/content/content/lectures/part3/195_software_engineering.md.erb
@@ -9,13 +9,13 @@ cat: software design
 {:start="1"}
 <%= include_topic :hw_reflection_cosi %>
 {:start="2"}
-1. **Prepare for full scalability runnoff dry run today!**
+1. **Prepare for full scalability runoff dry run today!**
 
 ##### Great, but not required, readings
 * [“Software Engineering: An Idea whose time has come and gone?](http://www.systemsguild.com/pdfs/tdmsoftwaresummer2009.pdf)
 * [“Can practitioners neglect theory and theoreticians neglect practice?"](http://disciplinas.stoa.usp.br/pluginfile.php/17266/mod_resource/content/1/ieee_computer_mbroy.pdf)
 * [What is Computer Science?](http://www.cs.mtu.edu/~john/whatiscs.html)
-* [Is Computer Science Sience?](http://www.cs.mtu.edu/~john/jenning.pdf)
+* [Is Computer Science Science?](http://www.cs.mtu.edu/~john/jenning.pdf)
 * [Is Mathematics a Science?](http://www.arachnoid.com/is_math_a_science/)
 
 #### Today
@@ -24,7 +24,7 @@ cat: software design
 * Dry Run of Scalability Runoff
 
 ##### Effectiveness
-* What does this mean: <%= link_to_topic :software_engineering %>
+* What does this mean: <%= link_to_topic :softw_engineering_brief %>
 * How do be effective: <%= link_to_topic :se_rules_of_thumb %>
 
 #### Next Class
