--- a/content/content/intro/05_syllabus.md.erb
+++ b/content/content/intro/05_syllabus.md.erb
@@ -4,7 +4,7 @@ title: (Draft) Syllabus
 #### Summary info
 <% tbh = TableHelper.new(:normal) %>
 <% tbh.headers("", "") %>
-<% tbh.row("Instructor", "Pito Salas <pitosalas@brandeis.edu>") %>
+<% tbh.row("Instructor", "Pito Salas <rpsalas@brandeis.edu>") %>
 <% tbh.row("Location", "TBD") %>
 <% tbh.row("Office Hours", "Go to this link to reserve an appointment: https://calendly.com/pitosalas/chat") %>
 <% tbh.row("Class Times", "Tuesday and Thursday, 3:30pm to 5:00pm") %>
@@ -30,7 +30,7 @@ This is most certainly an evolving space with new work happening both in academi
 #### Additional Information
 
 ##### Pre-requisites or permission
-Cosi21a and one 100 level Computer Science course, or permission of the instructor, are required for admission to this course. This is enforced rigorously **even for masters students**. Permission is not required if you have taken Cosi166b. The reason for the prerequisite is that we jump very quickly into using a new language (Ruby) and framework (Sinatra.) If you are a good programmer and feel comfortable learning Ruby and Sinatra on your own, then I will be glad to give you permission. Please send me an email at pitosalas@brandeis.edu with your questions.
+Cosi21a and Cosi166b - Capstone, or permission of the instructor, are required for admission to this course. This is enforced rigorously **even for masters students**. Permission is not required if you have taken Cosi166b. The reason for the prerequisite is that we jump very quickly into using a new language (Ruby) and framework (Sinatra.) If you are a good programmer and feel comfortable learning Ruby and Sinatra on your own, then I will be glad to give you permission. Please send me an email at pitosalas@brandeis.edu with your questions.
 
 ##### Pre-work
 This course moves fast and so it's crucial that you review the following pre-work. Depending on how long ago you completed Cosi166 (Capstone) this might be more or less nnecessary. Also you might have a new computer or changed your config. Review <%= link_to_topic :cosi105b_prework %>
