--- a/content/content/intro/10_course_toc.md.erb
+++ b/content/content/intro/10_course_toc.md.erb
@@ -1,4 +1,4 @@
 ---
 title: List of lectures
 ---
-<%= list_of(source: "lectures", rows: ["subsection","page"], cols: [:number, :date, :title, :cat, :desc, :homework], items: @items) %>
+<%= list_of(source: "lectures", rows: ["subsection","page"], cols: [:number, :date, :title, :cat, :desc], items: @items) %>
