--- a/content/content/lectures/part1/60_sinatra_intro.md.erb
+++ b/content/content/lectures/part1/60_sinatra_intro.md.erb
@@ -2,28 +2,11 @@
 title: Intro to Sinatra
 desc: Sinatra is a ruby application server
 cat: web
+slides: true
 ---
-<%= homework_hdr %>
 
+:topic_include :what_is_sinatra
+:topic_include:hands_on_sinatra_demo
+:topic_include :sinatra_technology_options
 
-##### Useful but not mandatory reading
-* Accessing Activerecord using the [Sinatra ActiveRecord Extension](https://github.com/janko-m/sinatra-activerecord)
-* Tutorial: [Simple Database Driven Website with Heroku](https://samuelstern.wordpress.com/2012/11/28/making-a-simple-database-driven-website-with-sinatra-and-heroku/)
-* The readme of Sinatra is a great resource: [Sinatra Readme](http://www.sinatrarb.com/intro.Basics of networking and hte web
-* Introduction to [Sinatra Testing](http://sinatrarb.com/testing.html)
-
-#### Teams
-* We assign students to teams
-
-#### More Review from 166
-* Core concept from 166: :topic_link :models /
-* Review: :topic_link :ar_db_mechanics /
-* Testing with [Minitest/Spec](https://github.com/seattlerb/minitest)
-
-<%= include_topic :what_is_sinatra %>
-<%= include_topic :hands_on_sinatra_demo %>
-
-<%= include_topic :sinatra_technology_options %>
-
-#### Next Class
 :lecture_end
