--- a/content/content/lectures/part2/115_web_services.md.erb
+++ b/content/content/lectures/part2/115_web_services.md.erb
@@ -5,6 +5,8 @@ homework: 1) Read about REST and respond to warmups; 2) Move your nanoTwitter fr
 cat: nt
 ---
 <%= homework_hdr %>
+* [Best Practices for designing APIs](https://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api)
+
 
 1. <%= partbadge %>**REST API Best Practices** Read this article. It's long but important: [Best Practices for Designing a Pragmatic RESTful API](http://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api). Here are some warmup questions to think about:
     * The PUT http verb and the POST http verb sound very similar. Can you explain the difference? Include an example from nanoTwitter of where each would be appropriate, and explain why. (Beware this is a question that trips up even experienced web engineers!)
