--- a/content/content/background/20_tech_presentations.md.erb
+++ b/content/content/background/20_tech_presentations.md.erb
@@ -12,15 +12,15 @@ In the coming weeks each student will be asked to research, prepare and present 
 
 <% tbh = TableHelper.new(:normal) %>
 <% tbh.headers("Date", "(Proposed) Presenters", "Topic") %>
-<% tbh.row("March 3", "Anyan", "Fat Client Architectures - React") %>
-<% tbh.row("March 6", "Daniel", "Push Processing and Web Sockets") %>
-<% tbh.row("March 10", "Xiaojing", "API Architectures other than REST - GraphQL") %>
-<% tbh.row("March 13", "Lin", "Containerizing - Docker") %>
-<% tbh.row("March 17", "Yifei", "NoSQL Databases - MongoDB") %>
-<% tbh.row("March 27", "Jingdi", "Full Text Search - ElasticSearch")%>
-<% tbh.row("March 31", "Zekai", "NodeJS - with Express, compared to Sinatra") %>
-<% tbh.row("April 3", "Yifan", "Kubernetes") %>
-<% tbh.row("April 14", "Matt", "Scalability in Scientific Computing") %>
+<% tbh.row("TBD", "", "Fat Client Architectures - React") %>
+<% tbh.row("TBD", "", "Push Processing and Web Sockets") %>
+<% tbh.row("TBD", "", "API Architectures other than REST - GraphQL") %>
+<% tbh.row("TBD", "", "Containerizing - Docker") %>
+<% tbh.row("TBD", "", "NoSQL Databases - MongoDB") %>
+<% tbh.row("TBD", "", "Full Text Search - ElasticSearch")%>
+<% tbh.row("TBD", "", "NodeJS - with Express, compared to Sinatra") %>
+<% tbh.row("TBD", "", "Kubernetes") %>
+<% tbh.row("TBD", "", "Scalability in Scientific Computing") %>
 <% tbh.row("?", "?", "Client programming languages - Elm") %>
 <% tbh.row("?", "?", "Database Sharding and Paritioning - ActiveRecord v6") %>
 <% tbh.row("?", "?", "Kubernetes") %>
