--- a/content/content/background/50_links_resources.md.erb
+++ b/content/content/background/50_links_resources.md.erb
@@ -4,14 +4,14 @@ title: Misc Links and Resources
 #### Links
 Here are various resources that will come in handy during this class.
 
-* <%= link_to_topic :cosi105b_ta_guide %>
+* :topic_link :cosi105b_ta_guide
 
 #### Resources
 
 * Teaching Assistant: [Julian Ho](julianho@brandeis.edu)
 
 #### Links that you may want to look up again
-* <%= link_to_topic :sinatra_technology_options %>
+* :topic_link :sinatra_technology_options /
 * Here's an [Easy to follow, comprehensive HTTP Tutorial](https://www.tutorialspoint.com/http)
 * Here's a great and fairly thorough introduciton to tcpip and networking, [TCP/IP Networking Guide](http://www.penguintutor.com/linux/basic-network-reference)
 * For TDD and testiung in general we will use [Minitest/Spec](https://github.com/seattlerb/minitest)
