--- a/content/content/lectures/part1/65_sinatra_twitter.md.erb
+++ b/content/content/lectures/part1/65_sinatra_twitter.md.erb
@@ -12,7 +12,6 @@ slides: true
 * Discuss the structure of a [Sinatra Program](http://sinatrarb.com/intro.html)  - classic and modular
 * Discuss the role of [Rack](https://github.com/rack/rack) and Rackup
 
-##### Introduction to SOA
-:topic_link :sinatra_series_3
+:topic_include :sinatra_series_3
 
 :lecture_end
