--- a/content/content/background/15_nt_links.md.erb
+++ b/content/content/background/15_nt_links.md.erb
@@ -2,13 +2,13 @@
 title: nanoTwitter
 desc: All about nanoTwitter
 ---
-Welcome to nanoTwitter. You will be working with a team of 2,3 or 4 studetns (changes from year to year) on creating this application usingn Ruby and Sinatra. In doing this you will be applying advanced testing, deployment and scaling techniques. The sections below outline the project in further detail
+Welcome to nanoTwitter. You will be working with a team of 2  students (changes from year to year) on creating this application using Ruby and Sinatra. In doing this you will be applying advanced testing, deployment and scaling techniques. The sections below outline the project in further detail
 
 #### nanoTwitter
 
-* We will not be creating a total clone of Twitter of course. But the key functionality, user interface, routes and details will all be there. They are described in detail in <%= link_to_topic :nt_functionality %>
-* In order to help you in your project planning, a general outline is provided. It is certainly not the only way to organize it and you may vary from it as you decide to. Here is the <%= link_to_topic :nt_outline %>
-* There are different ways of designing the nanoTwitter application. In this link we review some of the considerations and provide some guidelines: <%= link_to_topic :nt_arch %>
+* We will not be creating a total clone of Twitter of course. But the key functionality, user interface, routes and details will all be there. They are described in detail in :topic_link :nt_functionality /
+* In order to help you in your project planning, a general outline is provided. It is certainly not the only way to organize it and you may vary from it as you decide to. Here is the :topic_link :nt_outline /
+* There are different ways of designing the nanoTwitter application. In this link we review some of the considerations and provide some guidelines: :topic_link :nt_arch /
 
 #### Important Readings and Resources
 
