--- a/content/content/intro/05_syllabus.md.erb
+++ b/content/content/intro/05_syllabus.md.erb
@@ -1,5 +1,5 @@
 ---
-title: (Draft) Cosi105 - Scalability 2022 Syllabus 
+title: Cosi105 - Scalability 2022 Syllabus 
 ---
 #### Summary info
 <% tbh = TableHelper.new("table-striped table-sm table-responsive table-hover") %>
