--- a/content/content/lectures/part1/60_sinatra_intro.md.erb
+++ b/content/content/lectures/part1/60_sinatra_intro.md.erb
@@ -5,8 +5,8 @@ cat: web
 slides: true
 ---
 
-:topic_link :what_is_sinatra
-:topic_link :hands_on_sinatra_demo
-:topic_link :sinatra_technology_options
+* :topic_link :what_is_sinatra
+* :topic_link :hands_on_sinatra_demo
+* :topic_link :sinatra_technology_options
 
 :lecture_end
