--- a/content/content/lectures/part1/65_sinatra_twitter.md.erb
+++ b/content/content/lectures/part1/65_sinatra_twitter.md.erb
@@ -8,10 +8,10 @@ slides: true
 
 * Looking at the definitions of twitter features
 * Discuss what the twitter UI should look like
-* Discuss :topic_link :nt_outline /
+* Discuss :section_link :intro, :nanotwitter detailed overview
 * Discuss the structure of a [Sinatra Program](http://sinatrarb.com/intro.html)  - classic and modular
 * Discuss the role of [Rack](https://github.com/rack/rack) and Rackup
 
-:topic_include :sinatra_series_3
+:topic_include :scaling_SOA
 
 :lecture_end
