--- a/content/content/lectures/part2/80_sinatra_architecture.md.erb
+++ b/content/content/lectures/part2/80_sinatra_architecture.md.erb
@@ -30,8 +30,7 @@ cat: web
 1. HTTP and it's different Verbs like GET, PUT, POST etc.
 
 #### Discussion
-* :topic_link :sinatra_series_4 /
+* :topic_link :sinatra_series_3
 
-#### Next Class
 :lecture_end
  
