--- a/content/content/lectures/part2/90_introduce_scale.md.erb
+++ b/content/content/lectures/part2/90_introduce_scale.md.erb
@@ -30,8 +30,8 @@ cat: scale
 * :section_link :background, :tech_presentations 
 
 #### Reviewing the reading
-* :topic_link :sinatra_series_5 /
-* :topic_link :devops /
+* :topic_link :scaling_api_design
+* :topic_link :devops
 
 #### Work in teams
 * Using these principles, propose services for your nano twitter
