--- a/content/content/lectures/part2/105_more_scale.md.erb
+++ b/content/content/lectures/part2/105_more_scale.md.erb
@@ -6,11 +6,10 @@ homework: 1) Service API homework 3 (1 and 2 already completed)
 ---
 <%= homework_hdr %>
 
-1. <%= pdfbadge %> complete :topic_link :hw_service_api_3 %> <%= deliverable "Pdf with your responses" /
+1. <%= pdfbadge %> complete :topic_link :hw_service_api_3 %> <%= deliverable "Pdf with your responses"
 
 ##### Topics today
-* Continue with :topic_link :sinatra_series_5 /
-* More about :topic_link :devops /
+* More about :topic_link :devops
 * Demonstrate automation with [Runbook](https://github.com/braintree/runbook), [System Automation](https://medium.com/braintree-product-technology/https-medium-com-braintree-product-technology-runbook-be6f072cfc0d)
 * How to think about :topic_link :scaling /
 * The mighty :topic_link :monolith /
