--- a/content/content/lectures/part2/90_introduce_scale.md.erb
+++ b/content/content/lectures/part2/90_introduce_scale.md.erb
@@ -6,7 +6,7 @@ cat: scale
 ---
 <%= homework_hdr %>
 
-1. <%= partbadge %> <%= pdfbadge %> Read and think about :topic_link :sinatra_series_5 and answer the warmup questions that are stated there. <%= deliverable "Pdf with your responses" %>
+1. <%= partbadge %> <%= pdfbadge %> Read and think about old series 5 and answer the warmup questions that are stated there. <%= deliverable "Pdf with your responses" %>
 2. <%= partbadge %> <%= pdfbadge %> Read :topic_link :hw_service_api_0 and complete topic_link :hw_service_api_1 
 <%= deliverable "Pdf with your responses" %>
 
