--- a/content/content/lectures/part2/100_gs_andy_payne.md.erb
+++ b/content/content/lectures/part2/100_gs_andy_payne.md.erb
@@ -1,23 +1,6 @@
 ---
-title: "Guest Speaker: Andy Payne"
-desc: We will hear about scalability in the real world
+title: TBD
+desc: TBD
 cat: general
-homework: 1) Continue working on nT0.5
 ---
-<%= homework_hdr %>
-
-1. <%= zipbadge %> complete :topic_link :hw_service_api_2
-<%= deliverable "Your code zipped up, submitted it to Latte" %>
-
-##### Ongoing work
-
-* **Teams continue to work on nanoTwitter 0.3**. See: :topic_link :nt_outline / for detailed submission instructions and specifics for this stage.
-
-### Guest Speaker
-
-<%= include_topic :andy_payne %>
-
-Today he will focus on the technical and architectural aspects of scalability.
-
-#### Next Class
 :lecture_end
