--- a/content/content/lectures/part2/105_more_scale.md.erb
+++ b/content/content/lectures/part2/105_more_scale.md.erb
@@ -2,11 +2,8 @@
 title: Scalability, continued
 cat: scale
 desc: Examining what scalability means
-homework: 1) Service API homework 3 (1 and 2 already completed)
+slides: true
 ---
-<%= homework_hdr %>
-
-1. <%= pdfbadge %> complete :topic_link :hw_service_api_3 %> <%= deliverable "Pdf with your responses"
 
 ##### Topics today
 * More about :topic_link :devops
