--- a/content/content/intro/05_syllabus.md.erb
+++ b/content/content/intro/05_syllabus.md.erb
@@ -11,6 +11,12 @@ title: Cosi105 - Scalability 2022 Syllabus
 <% tbh.row("Location", "TBD") %>
 <% tbh.row("Prerequisites", "Cosi21a and Cosi166b (or permission)") %>
 <% tbh.row("Homework", "Daily homework assignments; Major nanoTwitter project; Team assignments. Success in this 4 credit hour course is based on the expectation that students will spend a minimum of 9 hours of study time per week in preparation for class (readings, papers, discussion sections, preparation for exams, etc.).  ") %>
+<% tbh.row("Room: ", "Shapiro Science 014") %>
+<% tbh.row("On-demand office Hours for Pito", "http://www.calendly.com/pitosalas/chat") %>
+<% tbh.row("Zoom: ", "https://brandeis.zoom.us/j/91622169574") %>
+<% tbh.row("Slack Channel  ", "https://cosi105b.slack.com") %>
+<% tbh.row("Gradescope  ", "https://www.gradescope.com/courses/354338") %>
+
 <%= tbh.render %>
 
 ### Course Description
