--- a/content/content/lectures/part3/150_scl_cache.md.erb
+++ b/content/content/lectures/part3/150_scl_cache.md.erb
@@ -1,22 +1,14 @@
 ---
 title: "Caching"
 desc: Caching is one of the first, simplest ways of attacking scale
-homework: 1) Complete nT 0.4
+slides: yes
 cat: scale
 ---
-<%= homework_hdr %>
-
-1. **Read**: [Introduction to Caching and Redis](https://www.codementor.io/brainyfarm/introduction-to-caching-and-redis-h6o16p4qx)
-
-##### Valuable, not required, reading
-* [Redis](http://redis.io)
-* [Memcached](http://memcached.org)
-* [Amazon Elastic Cache](http://aws.amazon.com/elasticache/)
-* [Sinatra Cache](https://github.com/kematzy/sinatra-cache)
-* [Twitter Clone using Redis](https://redis.io/topics/twitter-clone) ([code](https://github.com/danlucraft/retwis-rb))
-
 ##### Ongoing work
 * **Teams Complete and submit nanoTwitter 0.4**. See: :topic_link :nt_outline / for detailed submission instructions and specifics for this stage.
+
+* [Memcached](http://memcached.org)
+* [Amazon Elastic Cache](http://aws.amazon.com/elasticache/)
 
 #### Review: Achieving Scale
 * Measuring performance:
