--- a/content/content/lectures/part3/150_scl_cache.md.erb
+++ b/content/content/lectures/part3/150_scl_cache.md.erb
@@ -4,13 +4,10 @@ desc: Caching is one of the first, simplest ways of attacking scale
 slides: yes
 cat: scale
 ---
-##### Ongoing work
-* **Teams Complete and submit nanoTwitter 0.4**. See: :topic_link :nt_outline / for detailed submission instructions and specifics for this stage.
+:h3 Logistics
+* Magic Code: 
 
-* [Memcached](http://memcached.org)
-* [Amazon Elastic Cache](http://aws.amazon.com/elasticache/)
-
-#### Review: Achieving Scale
+:slide_title Review: Achieving Scale
 * Measuring performance:
   * How many Xs per second?
   * and/orhow long does it take to Y?
@@ -29,5 +26,4 @@ cat: scale
 
 <%= include_topic :redis %>
 
-#### Next Class
 :lecture_end
